<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.shouman.apps.thirdwayv.calac.ui.main.MainViewModel" />

        <variable
            name="validator"
            type="com.shouman.apps.thirdwayv.calac.Validator" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/result"
            result="@{viewModel.result}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Result = 25" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/operand_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:hint="@string/please_enter_the_second_operand"
            android:textColorHint="@color/primary_text"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeWidth="1dp"
            app:endIconDrawable="@drawable/ic_round_check"
            app:endIconMode="custom"
            app:endIconTint="@color/colorAccent"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:hintTextColor="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:setEndIconActive="@{validator.Companion.isOperandValid(viewModel.operandLiveData)}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="100"
                android:maxLines="1"
                android:text="@={viewModel.operandLiveData}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                tools:text="256" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row_1"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/operand_inputLayout">

            <ImageButton
                android:id="@+id/btn_undo"
                style="@style/CalcButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/undo_last_change"
                android:src="@drawable/ic_outline_undo_24"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/btn_plus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_plus"
                style="@style/CalcButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                selectedStatus="@{viewModel.selectedOperationLiveData}"
                android:onClick="@{() -> viewModel.selectOperation('+')}"
                android:text="@string/add_symbol"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/btn_sub"
                app:layout_constraintStart_toEndOf="@+id/btn_undo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_sub"
                style="@style/CalcButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                selectedStatus="@{viewModel.selectedOperationLiveData}"
                android:onClick="@{() -> viewModel.selectOperation('-')}"
                android:text="@string/sub_symbol"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_plus"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/btn_multi"
                app:layout_constraintStart_toEndOf="@+id/btn_plus" />

            <TextView
                android:id="@+id/btn_multi"
                style="@style/CalcButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                selectedStatus="@{viewModel.selectedOperationLiveData}"
                android:gravity="center"
                android:onClick="@{() -> viewModel.selectOperation('x')}"
                android:text="@string/multi_symbol"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_sub"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/btn_div"
                app:layout_constraintStart_toEndOf="@+id/btn_sub" />

            <TextView
                android:id="@+id/btn_div"
                style="@style/CalcButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                selectedStatus="@{viewModel.selectedOperationLiveData}"
                android:onClick="@{() -> viewModel.selectOperation('÷')}"
                android:text="@string/div_symbol"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_multi"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/btn_equal"
                app:layout_constraintStart_toEndOf="@+id/btn_multi" />

            <TextView
                android:id="@+id/btn_equal"
                style="@style/CalcButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="@{validator.Companion.isOperandValid(viewModel.operandLiveData) &amp;&amp; viewModel.selectedOperationLiveData != null}"
                android:onClick="@{() -> viewModel.addNewCell()}"
                android:text="@string/equal"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_multi"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/redo"
                app:layout_constraintStart_toEndOf="@+id/btn_div" />

            <ImageButton
                android:id="@+id/redo"
                style="@style/CalcButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/redo_last_change"
                android:src="@drawable/ic_outline_redo_24"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_equal"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cells_recView"
            cellsList="@{viewModel.data}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/primary_light"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/row_1"
            app:spanCount="4"
            tools:listitem="@layout/cell_list_item" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
